--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,11 @@
 
     <p>Welcome to Chat.Org</p>
 
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="./js/index.js">
+        // Making a req from client to server to keep connection open
+      
+    </script>
 </body>
 
 </html>
